ollama/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: ollama
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/auth-url: http://ak-outpost-authentik-embedded-outpost.sso.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
#    nginx.ingress.kubernetes.io/auth-signin: https://chat.secyour.space/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
#    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid
#    nginx.ingress.kubernetes.io/auth-snippet: |
#      proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: nginx
  rules:
    - host: ai.pratz.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 80
